# multidimensional-game-of-life

./: Cargo.toml
res/: gosper-glider-gun.txt
src/: display.rs  life.rs  main.rs
