[package]
name = "nlife-rs"
version = "0.1.0"
authors = ["Kyle Silver"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rayon = "1.5.0"
ncurses = "5.99.0"
crossbeam-channel = "0.5.0"
term_size = "1.0.0-beta.2"